--- a/style.css
+++ b/style.css
@@ -37,3 +37,18 @@ button:hover {
     margin-top: 20px;
     text-align: left;
 }
+
+body.dark-mode {
+    background-color: #333;
+    color: #fff;
+}
+
+body.dark-mode header, body.dark-mode footer {
+    background-color: #222;
+    color: #fff;
+}
+
+body.dark-mode .results-container, body.dark-mode .history-container {
+    background-color: #444;
+    color: #fff;
+}
